# monodzukuri2024_kinova_demo

./: CMakeLists.txt  README.md  build  compile_commands.json  vcpkg.json
etc/: MonodzukuriKinovaDemo.in.yaml
src/: CMakeLists.txt  MonodzukuriKinovaDemo.cpp  MonodzukuriKinovaDemo.h  api.h  fitts_game.cpp  fitts_game.h  lib.cpp  ui.cpp  ui.h
src/states/: CMakeLists.txt  MonodzukuriKinovaDemo_Compliance.cpp  MonodzukuriKinovaDemo_Compliance.h  MonodzukuriKinovaDemo_Initial.cpp  MonodzukuriKinovaDemo_Initial.h  MonodzukuriKinovaDemo_MinJerk.cpp  MonodzukuriKinovaDemo_MinJerk.h  MonodzukuriKinovaDemo_NSCompliant.cpp  MonodzukuriKinovaDemo_NSCompliant.h  MonodzukuriKinovaDemo_NonCompliant.cpp  MonodzukuriKinovaDemo_NonCompliant.h  MonodzukuriKinovaDemo_SinCompliance.cpp  MonodzukuriKinovaDemo_SinCompliance.h
tests/: CMakeLists.txt
tests/etc/: mc_rtc.yaml
